--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,10 @@
+/* CORRECTIONS:
+need to align to the top of the image the p headline;
+need to add margin between the columns;
+newsbites need to be centered;
+ */
+
+
 header {
   display: flex;
   justify-content: space-between;
@@ -20,7 +27,7 @@ header {
 /* CONTENT */
 .content {
   display: flex;
-  justify-content: space-between;    /* I will need to add the right and top margin, wait to know the measure*/
+  justify-content: center;
 }
 
 .column {
@@ -42,7 +49,6 @@ p {
 .img-headline {
   display: flex;
   background-image: url("../images/img-story-main.png");
-  justify-content: center;
 }
 
 p.headline {
@@ -50,6 +56,7 @@ p.headline {
   font-weight: bold;
   color: white;
   font-size: 30px;
+  align-self: flex-start;
 }
 
 p#mainheadline {
@@ -77,6 +84,11 @@ p#mainheadline {
   display: flex;
   flex-direction: column;
 }
+
+.column.large {
+  padding-right: 50px;
+}
+
 /* SECOND COLUMN */
 
 .medium {
@@ -89,9 +101,36 @@ p#mainheadline {
   justify-content: center;
 }
 
+.column.medium {
+  padding-right: 50px;
+}
 
 /* THIRD COLUMN */
 
 .small {
   width: 240px;
+}
+
+.story#newsbites {
+  align-items: center;
+}
+
+h2#newsbites {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.newsbites {
+  display: flex;
+  flex-direction: column;
+  background-color: gainsboro;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+}
+
+.newsbites p {
+  border-bottom: 0.5px black solid;
+  padding-left: 20px;
 }
