--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,3 +134,32 @@ h2#newsbites {
   border-bottom: 0.5px black solid;
   padding-left: 20px;
 }
+
+/* FOOTER */
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  align-items: center;
+  justify-content: center;
+  height: 250px;
+  }
+
+.footer-first-row {
+  display: flex;
+
+}
+
+.footer-first-row nav {
+  padding-left: 4px;
+}
+
+span#mytimestitle {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
