--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,165 +1,207 @@
-/* CORRECTIONS:
-need to align to the top of the image the p headline;
-need to add margin between the columns;
-newsbites need to be centered;
- */
+/* Universal Styles */
 
-
-header {
-  display: flex;
-  justify-content: space-between;
-  font-family: Verdana;
-  font-size: 14px;
-  font-weight: bold;
-  align-items: center;
-}
-
-.logo_header {
-  display: inline-flex;
-  align-items: center;
-}
-
-.logo_header p {
-  color: MediumAquamarine;
-}
-
-
-/* CONTENT */
-.content {
-  display: flex;
-  justify-content: center;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-}
-
-p {
+body {
+  margin: 0;
+  font-family: "Georgia", serif;
   font-size: 17px;
-  font-family: Georgia;
   color: black;
 }
 
-/* FIRST COLUMN */
-.large {
-  width: 630px;
+a {
+  color: black;
 }
 
-.img-headline {
-  display: flex;
-  background-image: url("../images/img-story-main.png");
-}
-
-p.headline {
-  font-family: Georgia;
-  font-weight: bold;
-  color: white;
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 30px;
-  align-self: flex-start;
+  font-weight: bold;
 }
 
-p#mainheadline {
-  font-size: 40px;   /* need to be centered */
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
 }
 
-.img-headline2 {
-  display: flex;
-  background-image: url("../images/img-story-2.png");
-  justify-content: center;
-}
-
-.img-headline3 {
-  display: flex;
-  background-image: url("../images/img-story-3.png");
-  justify-content: center;
-}
+/* Universal Styles - News Stories */
 
 .stories {
   display: flex;
   justify-content: space-between;
+  margin-top: 17px;
+}
+
+.stories .text-content {
+  height: 250px;
 }
 
 .story {
   display: flex;
   flex-direction: column;
-}
-
-.column.large {
-  padding-right: 50px;
-}
-
-/* SECOND COLUMN */
-
-.medium {
   width: 300px;
 }
 
-.img-headline4 {
-  display: flex;
-  background-image: url("../images/img-story-1.png");
-  justify-content: center;
+.narrative {
+  margin-top: 16px;
 }
+
+.image-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
+/* Header */
+
+header {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
+  font-family: "Verdana", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
+}
+
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-right: 12px;
+}
+
+.logo span {
+  color: mediumaquamarine;
+}
+
+header nav {
+  padding-right: 40px;
+}
+
+/* Main Content Container */
+
+.content {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
+}
+
+/* First News Column */
+
+.column.large {
+  width: 630px;
+}
+
+.lead-story .image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+  width: 630px;
+  margin-top: 0;
+  text-align: left;
+  font-size: 40px;
+}
+
+.lead-story .image-content span {
+  margin-left: 20px;
+}
+
+.fall-cancelled.image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+}
+
+.pop-culture.image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+}
+
+/* Second News Column */
 
 .column.medium {
-  padding-right: 50px;
+  width: 300px;
 }
 
-/* THIRD COLUMN */
+.cat-ceo.image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+}
 
-.small {
+/* Third News Column */
+
+.column.small {
   width: 240px;
 }
 
-.story#newsbites {
-  align-items: center;
+img.cookie {
+  height: 240px;
 }
 
-h2#newsbites {
+.news-bites h3 {
+  margin-bottom: 41px;
   font-size: 16px;
   font-weight: bold;
+  text-align: center;
 }
 
-.newsbites {
-  display: flex;
-  flex-direction: column;
-  background-color: gainsboro;
-  background-color: WhiteSmoke;
-  font-family: Verdana;
+.news-bites .bite {
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: whitesmoke;
+  font-family: "Verdana", sans-serif;
   font-size: 12px;
-  color: DimGray;
+  color: dimgray;
 }
 
-.newsbites p {
-  border-bottom: 0.5px black solid;
-  padding-left: 20px;
+.bite span {
+  padding-left: 11px;
 }
 
-/* FOOTER */
+/* Footer */
+
 footer {
   display: flex;
-  flex-direction: column;
-  background-color: MediumAquamarine;
-  margin: auto;
-  font-family: Verdana;
-  font-size: 12px;
   align-items: center;
   justify-content: center;
-  height: 250px;
-  }
-
-.footer-first-row {
-  display: flex;
-
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: mediumaquamarine;
+  margin: auto;
+  font-family: "Verdana", sans-serif;
+  font-size: 12px;
 }
 
-.footer-first-row nav {
-  padding-left: 4px;
-}
-
-span#mytimestitle {
-  font-family: Georgia;
+footer .title {
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: "Georgia", serif;
   font-size: 16px;
   font-weight: bold;
   color: white;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
 }
